# trdx

./: .gitignore  README.md
steamvr_driver/: CHANGELOG.md  build_driver.bat
steamvr_driver/src/: CMakeLists.txt  trdx_driver.cpp  trdx_driver.h
steamvr_driver/trdx_tracker/: driver.vrdrivermanifest
steamvr_driver/trdx_tracker/resources/: driver.vrresources
steamvr_driver/trdx_tracker/resources/input/: trdx_tracker_bindings.json  trdx_tracker_profile.json
trdx/: TECHNICAL_DETAILS.md  main.py  requirements.txt
trdx/assets/: README.md
trdx/config/: tracking_config_optimized.json  trdx_config.json  trdx_config_backup.json
